# plexus

./: CHANGELOG.md  CMakeLists.txt  Doxyfile.in  README.md
include/Cycles/: executor.h  graph_builder.h  node.h
include/plexus/: context.h  execution_graph.h  executor.h  graph_builder.h  node.h  runtime.h  thread_pool.h
include/plexus/detail/: function_traits.h
src/: context.cpp  execution_graph.cpp  executor.cpp  graph_builder.cpp  ring_buffer.h  runtime.cpp  task_node_pool.h  thread_pool.cpp  thread_pool.h  work_stealing_queue.h
tests/: test_concurrency.cpp  test_cycle_detection.cpp  test_error_handling.cpp  test_executor.cpp  test_explicit_ordering.cpp  test_graph_viz.cpp  test_node_groups.cpp  test_ring_buffer.cpp  test_runtime.cpp  test_thread_pool.cpp  test_topology.cpp  test_ws_queue.cpp
